SERVER-31119 Make string.cpp compatible with boost 1.62

Add a conditional for boost > 1.62 compatibility, boyer_moore_search
now returns an std::pair.

Signed-off-by: Andrew Morrow <acm@mongodb.com>